--- a/react-app/src/App.css
+++ b/react-app/src/App.css
@@ -1,28 +1,84 @@
-.App {
+h1 {
   text-align: center;
 }
-
-.App-logo {
-  animation: App-logo-spin infinite 20s linear;
-  height: 80px;
+h1:hover {
+  text-decoration: underline;
 }
-
-.App-header {
-  background-color: #222;
-  height: 150px;
-  padding: 20px;
-  color: white;
+a {
+  text-decoration: none;
+  color: inherit;
 }
-
-.App-title {
-  font-size: 1.5em;
+.form-group:not(.last-child) {
+  margin-bottom: 10px;
 }
-
-.App-intro {
-  font-size: large;
+.categorias-list {
+  list-style: none;
+  padding-left: 0;
 }
-
-@keyframes App-logo-spin {
-  from { transform: rotate(0deg); }
-  to { transform: rotate(360deg); }
+.categorias-list li {
+  display: inline-block;
+  margin: 5px;
+}
+.categorias-list li a {
+  background-color: #ccc;
+  padding: 5px;
+}
+.categorias-list li a:hover {
+  background: #999;
+}
+.categorias-wrapper, .main-content {
+  padding: 10px;
+}
+.voltar-btn-wrapper {
+  margin: 10px;
+}
+.voltar-btn-wrapper button {
+  padding: 0;
+}
+.voltar-btn-wrapper a {
+  padding: 5px;
+}
+.h3-wrapper {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+}
+.ordenar-por label {
+  padding-right: 5px;
+}
+.posts-table {
+  width: 100%;
+  text-align: center;
+  border-collapse: collapse;
+}
+.posts-table th {
+  background-color: #ccc;
+  padding: 5px;
+}
+.posts-table th, .posts-table td {
+  border: 1px solid black;
+}
+.posts-table td {
+  padding: 3px;
+}
+.posts-table td button {
+  padding: 0;
+}
+.posts-table td button a {
+  padding: 5px;
+}
+#nova-postagem-btn {
+  padding: 5px;
+}
+.post-form {
+  width: 100%;
+  max-width: 600px;
+}
+.post-form label, .post-form input, .post-form select, .post-form textarea {
+  width: 100%;
+}
+.post-form label {
+  margin-right: 5px;
+  text-align: center;
+  font-weight: bold;
 }
