--- a/react-app/src/index.css
+++ b/react-app/src/index.css
@@ -14,6 +14,9 @@ a {
 button:hover {
   cursor: pointer;
 }
+textarea {
+  min-height: 100px;
+}
 .small {
   font-size: 12px;
 }
@@ -80,11 +83,11 @@ button:hover {
 .posts-table td button a {
   padding: 5px;
 }
-.post-form, .add-comentario {
+.post-form, .comentario-form {
   width: 100%;
   max-width: 600px;
 }
-.post-form label, .post-form input, .post-form select, .post-form textarea, .add-comentario input, .add-comentario textarea {
+.post-form label, .post-form input, .post-form select, .post-form textarea, .comentario-form input, .comentario-form textarea {
   width: 100%;
 }
 .post-form label {
@@ -120,7 +123,7 @@ button:hover {
 .comentario-footer {
   margin-top: 10px;
 }
-.add-comentario button {
+.comentario-form button {
   margin-top: 5px;
 }
 .comentario:last-of-type hr {
